# OpenCV_Material

Robotica/Practicas/Practica1_Aleatorio/: Main.cpp  a.out
Robotica/Practicas/Practica2_Sort/: CMakeLists.txt
Robotica/Practicas/Practica3_Clases/: CMakeLists.txt
Robotica/Practicas/Practica4_OpenCV_Prueba/: CMakeLists.txt
Robotica/Practicas/Practica5_Histograma/: CMakeLists.txt
Robotica/Practicas/Practica6_Filtros/: CMakeLists.txt
Robotica/Tareas/Clases_Instancias/: CMakeLists.txt  setup.sh
Robotica/Tareas/Collage/: CMakeLists.txt
Robotica/Tareas/Collage/include/: collage.hpp
Robotica/Tareas/Collage/src/: collage.cpp  main.cpp
Robotica/Tareas/Otsu/: CMakeLists.txt  otsu.cpp
Vision/Binarization/: CMakeLists.txt
Vision/Binarization/include/: binary.hpp
Vision/Binarization/src/: binary.cpp  main.cpp
Vision/Edge/: CMakeLists.txt
Vision/Edge/include/: edge.hpp
Vision/Edge/src/: edge.cpp  main.cpp
Vision/Fourier/: CMakeLists.txt
Vision/Fourier/src/: main.cpp
Vision/FourierVideo/: CMakeLists.txt
Vision/FourierVideo/src/: main.cpp
Vision/HOG/: CMakeLists.txt
Vision/HOG/src/: main.cpp
Vision/KNN/: CMakeLists.txt
Vision/KNN/src/: main.cpp
Vision/ObjectDetection/: CMakeLists.txt
Vision/PlateDetector/: CMakeLists.txt
Vision/PlateDetector/include/: DetectChars.h  DetectPlates.h  Main.h  Preprocess.h
Vision/PlateDetector/src/: DetectChars.cpp  DetectPlates.cpp  Main.cpp  Preprocess.cpp
Vision/Project/: CMakeLists.txt
Vision/SegmentRGB/: CMakeLists.txt
Vision/Skin2/: CMakeLists.txt
Vision/SkinDetector/: CMakeLists.txt
(+27 files in other folders)
